--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
 <body>
     <!-- Principal conteneur -->
     <div class="page-container">
-        <header>
-            <div class="bloc bgc-white l-bloc " id="bloc-0">
+            <header class="bloc bgc-white l-bloc " id="bloc-0">
                 <div class="container bloc-sm">
-
                     <nav class="navbar row">
                         <div class="navbar-header">
                             <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de la barre de navigation de l'agence web: La chouette agence" height="40" /></a>
@@ -61,10 +59,8 @@
                         </div>
                     </nav>
                 </div>
-            </div>
-        </header>
-        <main>
-            <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+            </header>
+            <main class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
                 <div class="container bloc-lg">
                     <div class="row tight-width-whitespace">
                         <div class="col-sm-12">
@@ -78,10 +74,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </main>
-        <aside>
-            <div class="bloc bgc-white l-bloc" id="bloc-2-services">
+            </main>
+            <aside class="bloc bgc-white l-bloc" id="bloc-2-services">
                 <div class="container bloc-md">
                     <div class="row">
                         <div class="col-sm-12 text-center">
@@ -132,10 +126,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </aside>
-        <section>
-            <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+            </aside>
+            <section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
                 <div class="container bloc-lg">
                     <div class="row tight-width-whitespace black-background">
                         <div class="col-sm-12">
@@ -150,10 +142,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <article>
-            <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+            </section>
+            <article class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
                 <div class="container bloc-lg">
                     <div class="row">
                         <div class="col-sm-12 text-center">
@@ -202,10 +192,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </article>
-        <section>
-            <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+            </article>
+            <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
                 <div class="container bloc-lg">
                     <div class="row">
                         <h5 class="mg-md text-center tc-white">
@@ -216,10 +204,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <footer>
-            <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+            </section>
+            <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
                 <div class="container bloc-sm">
                     <div class="row">
                         <div class="col-sm-12">
@@ -251,8 +237,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
     </div>
     <!-- Principal conteneur END -->
 </body>
