--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,16 @@
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
+    <meta property="og:title" content="La Chouette Agence">
+    <meta property="og:description" content="La chouette agence est une agence de Web Design basée sur Lyon qui aide les entreprises à devenir attractives et visible sur Internet">
+    <meta property="og:image" content="img/picture-site">
+    <meta property="og:url" content="https://luck-art.github.io/LucasPotron_4_22092020/">
+    <meta name="twitter:title" content="La Chouette Agence">
+    <meta name="twitter:description" content="La chouette agence est une agence de Web Design basée sur Lyon qui aide les entreprises à devenir attractives et visible sur Internet">
+    <meta name="twitter:image" content="img/picture-site">
+    <meta name="twitter:card" content="La_Chouette_Agence">
+
+
     <script defer src="./js/jquery-2.1.0.min.js"></script>
     <script defer src="./js/bootstrap.min.js"></script>
     <script defer src="./js/blocs.min.js"></script>
@@ -40,8 +50,7 @@
 <body>
     <!-- Principal conteneur -->
     <div class="page-container">
-        <header>
-            <div class="bloc bgc-white l-bloc " id="bloc-0">
+            <header class="bloc bgc-white l-bloc " id="bloc-0">
                 <div class="container bloc-sm">
                     <nav class="navbar row">
                         <div class="navbar-header">
@@ -59,10 +68,8 @@
                         </div>
                     </nav>
                 </div>
-            </div>
-        </header>
-        <main>
-            <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+            </header>
+            <main class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
                 <div class="container bloc-lg">
                     <div class="row">
                         <div class="col-sm-12">
@@ -77,10 +84,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </main>
-        <aside>
-            <div class="bloc bgc-white l-bloc" id="bloc-7">
+            </main>
+            <aside class="bloc bgc-white l-bloc" id="bloc-7">
                 <div class="container bloc-lg">
                     <div class="row">
                         <div class="col-sm-6">
@@ -121,41 +126,38 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </aside>
+            </aside>
 
         <!-- ScrollToTop Button -->
         <a class="bloc-button btn btn-d scrollToTop" aria-label="Aller en haut de la page" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
 
-        <footer>
-            <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-                <div class="container bloc-sm">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <h3 class="text-center white">
-                                La chouette agence - Agence web basée à Lyon.<br>
-                            </h3>
-                            <div class="row row-no-gutters social">
-                                <div class="col-sm-3">
-                                    <div class="text-center">
-                                        <a class="social" aria-label="Icône Twitter" href=""><span class="fa fa-twitter icon-md"></span></a>
-                                    </div>
+        <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+            <div class="container bloc-sm">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h6 class="text-center white">
+                            La chouette agence - Agence web basée à Lyon.<br>
+                        </h6>
+                        <div class="row row-no-gutters social">
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" aria-label="Icône Twitter" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
-                                <div class="col-sm-3">
-                                    <div class="text-center">
-                                        <a class="social" aria-label="Icône Facebook" href=""><span class="fa fa-facebook icon-md"></span></a>
-                                    </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" aria-label="Icône Facebook" href="https://facebook.fr"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
-                                <div class="col-sm-3">
-                                    <div class="text-center">
-                                        <a class="social" aria-label="Icône Dribbble" href=""><span class="fa fa-dribbble icon-md"></span></a>
-                                    </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" aria-label="Icône Dribbble" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
-                                <div class="col-sm-3">
-                                    <div class="text-center">
-                                        <a class="social" aria-label="Icône Instagram" href=""><span class="fa fa-instagram icon-md"></span></a>
-                                    </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" aria-label="Icône Instagram" href="https://instagram.com"><span class="fa fa-instagram icon-md" ></span></a>
                                 </div>
                             </div>
                         </div>
