--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
+    <meta property="og:title" content="La Chouette Agence">
+    <meta property="og:description" content="La chouette agence est une agence de Web Design basée sur Lyon qui aide les entreprises à devenir attractives et visible sur Internet">
+    <meta property="og:image" content="img/picture-site">
+    <meta property="og:url" content="https://luck-art.github.io/LucasPotron_4_22092020/">
+    <meta name="twitter:title" content="La Chouette Agence">
+    <meta name="twitter:description" content="La chouette agence est une agence de Web Design basée sur Lyon qui aide les entreprises à devenir attractives et visible sur Internet">
+    <meta name="twitter:image" content="img/picture-site">
+    <meta name="twitter:card" content="La_Chouette_Agence">
+
 
     <script defer src="./js/jquery-2.1.0.min.js"></script>
     <script defer src="./js/bootstrap.min.js"></script>
@@ -215,22 +224,22 @@
                             <div class="row row-no-gutters social">
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" aria-label="Icône Twitter" href=""><span class="fa fa-twitter icon-md"></span></a>
+                                        <a class="social" aria-label="Icône Twitter" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" aria-label="Icône Facebook" href=""><span class="fa fa-facebook icon-md"></span></a>
+                                        <a class="social" aria-label="Icône Facebook" href="https://facebook.fr"><span class="fa fa-facebook icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" aria-label="Icône Dribbble" href=""><span class="fa fa-dribbble icon-md"></span></a>
+                                        <a class="social" aria-label="Icône Dribbble" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" aria-label="Icône Instagram" href=""><span class="fa fa-instagram icon-md" ></span></a>
+                                        <a class="social" aria-label="Icône Instagram" href="https://instagram.com"><span class="fa fa-instagram icon-md" ></span></a>
                                     </div>
                                 </div>
                             </div>
