--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="row tight-width-whitespace portfolio-row">
                         <div class="col-sm-6">
-                            <a href="#" data-lightbox="img/1_min.png" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1_min.png" alt="Image du projet: refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" /></a>
+                            <a href="#" data-lightbox="img/1_min.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1_min.webp" alt="Image du projet: refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" /></a>
                             <h5 class="mg-md text-center">
                                 Refonte d'un site web pour un journal local
                             </h5>
@@ -171,7 +171,7 @@
                             </p>
                         </div>
                         <div class="col-sm-6">
-                            <a href="#" data-lightbox="img/2_min.png" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2_min.png" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour photographes" /></a>
+                            <a href="#" data-lightbox="img/2_min.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2_min.webp" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour photographes" /></a>
                             <h5 class="mg-md text-center">
                                 Création d'un site web pour photographes
                             </h5>
@@ -182,7 +182,7 @@
                     </div>
                     <div class="row tight-width-whitespace portfolio-row">
                         <div class="col-sm-6">
-                            <a href="#" data-lightbox="img/3_min.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3_min.png" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour voyageur" /></a>
+                            <a href="#" data-lightbox="img/3_min.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3_min.webp" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour voyageur" /></a>
                             <h5 class="mg-md text-center">
                                 Création d'un site internet pour un voyageur
                             </h5>
@@ -191,7 +191,7 @@
                             </p>
                         </div>
                         <div class="col-sm-6">
-                            <a href="#" data-lightbox="img/4_min.png" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4_min.png" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour agence de mariage" /></a>
+                            <a href="#" data-lightbox="img/4_min.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4_min.webp" class="img-responsive portfolio-thumb" alt="Image du projet: création d'un site web pour agence de mariage" /></a>
                             <h5 class="mg-md text-center">
                                 Conception d'un site pour une agence de mariage
                             </h5>
